--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
+  "scripts": {
+    "start": "nodemon server/index.js",
+    "build": "browserify -t [ babelify --presets [ react ] ] app/index.js -o public/bundle.js"
+  },
   "dependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.21.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
+    "babelify": "^7.3.0",
     "body-parser": "^1.15.2",
+    "browserify": "^13.1.1",
     "express": "^4.14.0",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
