--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "browserify -t [ babelify --presets [ react ] ] app/index.js -o public/bundle.js"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel": "^6.5.2",
     "babel-core": "^6.21.0",
     "babel-preset-es2015": "^6.18.0",
