--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "babelify": "^7.3.0",
     "body-parser": "^1.15.2",
     "browserify": "^13.1.1",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "mongo": "^3.0.0",
+    "mongoose": "^4.7.4",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
     "react": "^15.4.1",
