--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "^0.39.2",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "uuid": "^3.0.1"
   }
 }
