--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-native": "^0.39.2",
     "react-redux": "^5.0.1",
