--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ollie's Animal Game",
+  "name": "TheAnimalGame",
   "version": "1.0.0",
   "repository": "github.com/jhbarnett/AnimalGame",
   "author": "Jason Barnett jhb.task@gmail.com",
