--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "repository": "github.com/jhbarnett/AnimalGame",
   "author": "Jason Barnett jhb.task@gmail.com",
   "engines": {
-    "node": "6.6.0"
+    "node": "~6.6.0",
+    "npm": "~3.10.9"
   },  
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
     "build": "browserify -t [ babelify --presets [ react ] ] app/index.js -o public/bundle.js"
   },
   "dependencies": {
@@ -22,7 +23,7 @@
     "browserify": "^13.1.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "mongo": "^3.0.0",
+    "mongo": "^2.0.0",
     "mongoose": "^4.7.4",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
