--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "TheAnimalGame",
+  "name": "theanimalgame",
   "version": "1.0.0",
   "repository": "github.com/jhbarnett/AnimalGame",
   "author": "Jason Barnett jhb.task@gmail.com",
   "engines": {
     "node": "~6.6.0",
     "npm": "~3.10.9"
-  },  
+  },
   "scripts": {
     "start": "node server/index.js",
     "build": "browserify -t [ babelify --presets [ react ] ] app/index.js -o public/bundle.js"
@@ -23,6 +23,7 @@
     "browserify": "^13.1.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "mongo": "^0.1.0",
     "mongoose": "^4.7.4",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
