--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browserify": "^13.1.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "http": "0.0.0",
     "mongo": "^0.1.0",
     "mongoose": "^4.7.4",
     "nodemon": "^1.11.0",
