--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "devDependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-3": "^6.22.0",
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
     "jquery": "^2.2.0",
@@ -28,12 +30,12 @@
     "less-loader": "^4.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "semantic-ui-less": "^2.2.9",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
     "webpack-bundle-tracker": "0.0.93",
-    "webpack-dev-server": "^2.4.2",
-    "semantic-ui-less": "^2.2.9"
+    "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
     "history": "^4.6.1",
