--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 *.pyc
 node_modules/
 db.sqlite3
-assets/public/webpack/main
+assets/public/webpack/*.js
+assets/public/webpack/*.map
+assets/public/webpack/*.map.js
 assets/public/webpack/*.eot
 assets/public/webpack/*.svg
 assets/public/webpack/*.woff2
