--- a/package.json
+++ b/package.json
@@ -23,15 +23,13 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-3": "^6.22.0",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.27.3",
     "file-loader": "^0.9.0",
-    "jquery": "^2.2.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "semantic-ui-less": "^2.2.9",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.16.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
     "webpack-bundle-tracker": "0.0.93",
@@ -43,6 +41,7 @@
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^5.0.0-alpha.4",
     "redux": "^3.6.0",
-    "redux-saga": "^0.14.3"
+    "redux-saga": "^0.14.3",
+    "semantic-ui-react": "^0.67.1"
   }
 }
