--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^5.0.0-alpha.4",
     "redux": "^3.6.0",
-    "redux-saga": "^0.14.3",
-    "semantic-ui-react": "^0.67.1"
+    "redux-saga": "^0.14.3"
   }
 }
