--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server --content-base assets/public/webpack/ --hot",
     "makemig": "python manage.py makemigrations",
     "mig": "python manage.py migrate",
-    "postinstall": "node semantic-fix.js"
+    "postinstall": "npm start"
   },
   "keywords": [
     "django",
@@ -17,7 +17,7 @@
   ],
   "author": "Jason Barnett",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-plugin-transform-function-bind": "^6.22.0",
@@ -35,9 +35,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
     "webpack-bundle-tracker": "0.0.93",
-    "webpack-dev-server": "^2.4.2"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^2.4.2",
     "history": "^4.6.1",
     "react-redux": "^5.0.3",
     "react-router-dom": "^4.0.0",
