--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server --content-base assets/public/webpack/ --hot",
     "makemig": "python manage.py makemigrations",
     "mig": "python manage.py migrate",
-    "postinstall": "npm start"
+    "postinstall": "webpack && python manage.py runserver"
   },
   "keywords": [
     "django",
