--- a/package.json
+++ b/package.json
@@ -27,20 +27,21 @@
     "babel-preset-stage-3": "^6.22.0",
     "css-loader": "^0.27.3",
     "file-loader": "^0.9.0",
+    "history": "^4.6.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router-dom": "^4.0.0",
+    "react-router-redux": "^5.0.0-alpha.4",
+    "redux": "^3.6.0",
+    "redux-saga": "^0.14.3",
     "style-loader": "^0.16.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
     "webpack-bundle-tracker": "0.0.93",
     "webpack-dev-server": "^2.4.2",
-    "history": "^4.6.1",
-    "react-redux": "^5.0.3",
-    "react-router-dom": "^4.0.0",
-    "react-router-redux": "^5.0.0-alpha.4",
-    "redux": "^3.6.0",
-    "redux-saga": "^0.14.3"
+    "whatwg-fetch": "^2.0.3"
   }
 }
